--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
